Switch from GtkComboEntry to GtkCombo

https://bugzilla.gnome.org/show_bug.cgi?id=604169